calculadora punto numeral a

--- a/testnexarte/src/App.css
+++ b/testnexarte/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.button{
+  margin-top: 50px;
+  background-color: rgb(88, 204, 68);
+  width: 20%;
+  margin-left: 300px;
+  margin-bottom:10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input{
+
+  display: block;
+  padding-top: 10px;
+  margin-top: 10px;
+  margin-left: 200px;
+  width: 50%;
+  text-align: right;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+  width: 50%;
+  height: 40%;
+  margin-left: 300px;
+  margin-top: 100px;
+  padding-top: 10px;
+  background-color:lightblue;
+}
+.custom-select{
+  width: 50%;
+  margin-left: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#res{
+  margin-left:70%;
+  margin-top: 5%;
+  font-size: 30px;
+  color: brown;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
